# ExpliceLang

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  utility.sh
docs/: grammar.md  vm.md
includes/codegen/: disassembler.hpp  emit_pass.hpp  flow_nodes.hpp  graph_pass.hpp  graph_printer.hpp  ir_printer.hpp  policies.hpp  steps.hpp
includes/frontend/: files.hpp  lexer.hpp  parser.hpp  token.hpp
includes/semantics/: analysis.hpp  tags.hpp
includes/syntax/: expr_base.hpp  expr_visitor_base.hpp  exprs.hpp  stmt_base.hpp  stmt_visitor_base.hpp  stmts.hpp
includes/vm/: chunk.hpp  tags.hpp  values.hpp  vm.hpp
src/: CMakeLists.txt  xlang.cpp  xplice.cpp
src/codegen/: CMakeLists.txt  disassembler.cpp  emit_pass.cpp  flow_nodes.cpp  graph_pass.cpp  graph_printer.cpp  ir_printer.cpp
src/frontend/: CMakeLists.txt  files.cpp  lexer.cpp  parser.cpp  token.cpp
src/semantics/: CMakeLists.txt  analysis.cpp  tags.cpp
src/syntax/: CMakeLists.txt  exprs.cpp  stmts.cpp
src/vm/: CMakeLists.txt  values.cpp  vm.cpp
test_analog_sources/: test_3b.py
test_sources/: test_1.xlang  test_2.xlang  test_3.xplice  test_3b.xlang  test_3c.xlang  test_3c.xplice  test_3d.xplice  test_3e.xplice  test_4.xlang  test_4.xplice  test_5.xplice  test_6.xplice
tests/: CMakeLists.txt  xlang_test_codegen.cpp  xlang_test_lexer.cpp  xlang_test_parser.cpp  xlang_test_sema.cpp
