add_subdirectory(frontend)
add_subdirectory(syntax)
add_subdirectory(semantics)
add_subdirectory(codegen)
add_subdirectory(vm)

add_executable(xplice)
target_include_directories(xplice PUBLIC ${XLANG_INC_DIR})
target_link_directories(xplice PRIVATE ${XLANG_LIB_DIR})
target_link_libraries(xplice PRIVATE frontend PRIVATE syntax PRIVATE semantics PRIVATE codegen PRIVATE vm)
target_sources(xplice PRIVATE xplice.cpp)
